# GDB-RAG

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  start.sh
data/: bm25_index.pkl
src/gdb_rag/: __init__.py  chunker.py  cli.py  config.py  crawler.py  index.py  llm.py  parser.py  server.py
src/gdb_rag/static/: index.html
tests/: test_crawler.py  test_parser_chunker.py
