[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdb-rag"
version = "0.1.0"
description = "Build a local ChromaDB vector database from the GDB manual."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "flask",
  "rank-bm25",
  "chromadb",
  "requests",
  "sentence-transformers",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
gdb-rag = "gdb_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
